clusters/aws-east/overlays/locality-loadbalancing/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld.sample.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 1
    loadBalancer:
      consistentHash:
        useSourceIp: true
      # simple: ROUND_ROBIN
      localityLbSetting:
        enabled: true
        failover:
          - from: cluster1
            to: cluster2
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1s
      splitExternalLocalOriginErrors: true
      consecutiveLocalOriginFailures: 1
